--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "watch-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
     "update-translations": "node update-translations.js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lol": "lol"
   }
 }
